--- a/app/templates/admin/admin_post.html
+++ b/app/templates/admin/admin_post.html
@@ -1,1 +1,68 @@
-testing
+{% extends "admin/base.html" %}
+
+{% block content %}
+
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">ng-AdImin</h1>
+
+		    {% if data %}
+		    <form>
+                      <div class="input-group custom-search-form">
+			
+                        <input type="text" class="form-control" placeholder="Search..." name="query">
+                        <span class="input-group-btn">
+                          <button class="btn btn-default" type="button">
+                            <i class="fa fa-search"></i>
+                          </button>
+			</span>
+                      </div>
+		    </form>
+		    <br />
+                <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Thumb</th>
+                    <th>Title</th>
+                    <th>Category</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% set count = 1 %}
+		  {% for d in data %}
+                  <tr>
+                    <td>{{ count }}</td>
+                    <td><img src="{{ d['url'] }}" width="250"></td>
+                    <td>{{ d['titleNoFormatting'] }}</td>
+                    <td></td>
+                  </tr>
+                  {% set count = count + 1 %}
+		  {% endfor %}
+                </tbody>
+                </table>
+		<button class="btn btn-large btn-primary" type="submit" id="butInsertAll">Insert All Selection</button>
+		{% else %}
+		<form>
+                  <div class="input-group custom-search-form">
+		    
+                    <input type="text" class="form-control" placeholder="Search..." name="query">
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" type="button">
+                        <i class="fa fa-search"></i>
+                      </button>
+		    </span>
+                  </div>
+		</form>
+		{% endif %}
+
+
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /#page-wrapper -->
+
+{% endblock %}
