--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -262,7 +262,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="/"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="/admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="/admin/grabber"><i class="fa fa-dashboard fa-fw"></i> Grabber</a>
