show keyword / query di input search form

--- a/app/templates/admin/admin_post.html
+++ b/app/templates/admin/admin_post.html
@@ -11,7 +11,7 @@
 		    <form>
                   <div class="input-group custom-search-form">
 		    
-                    <input type="text" class="form-control" placeholder="Search..." name="query">
+                    <input type="text" class="form-control" value="{{ query }}" name="query">
                     <span class="input-group-btn">
                       <button class="btn btn-default" type="button">
                         <i class="fa fa-search"></i>
