now admin <title> is modular, can be configured from index.html

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    {% block title %}
     <title>Start Bootstrap - SB Admin Version 2.0 Demo</title>
+    {% endblock %}
 
     <!-- Core CSS - Include with every page -->
     <link href="/static/admin/css/bootstrap.min.css" rel="stylesheet">
