--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,4 +1,8 @@
 {% extends "admin/base.html" %}
+{% block title %}
+<title>Dashboard</title>
+{% endblock %}
+
 {% block content %}
         <div id="page-wrapper">
             <div class="row">
