adding /draft menu in admin dashboard

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -270,6 +270,9 @@
                             <a href="/admin/grabber"><i class="fa fa-dashboard fa-fw"></i> Grabber</a>
                         </li>
                         <li>
+                            <a href="/admin/drafted"><i class="fa fa-dashboard fa-fw"></i> Draft Process</a>
+                        </li>
+                        <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
