from /admin/drafted to /admin/draft

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -270,7 +270,7 @@
                             <a href="/admin/grabber"><i class="fa fa-dashboard fa-fw"></i> Grabber</a>
                         </li>
                         <li>
-                            <a href="/admin/drafted"><i class="fa fa-dashboard fa-fw"></i> Draft Process</a>
+                            <a href="/admin/draft"><i class="fa fa-dashboard fa-fw"></i> Draft</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
