change html title tag

--- a/app/templates/admin/admin_draft.html
+++ b/app/templates/admin/admin_draft.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 
 {% block title %}
-<title>Grabber for NgAdImin</title>
+<title>Draft for NgAdImin</title>
 {% endblock %}
 
 {% block content %}
