--- a/app/templates/admin/admin_draft.html
+++ b/app/templates/admin/admin_draft.html
@@ -9,10 +9,35 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">ng-AdImin</h1>
-
+                    <h1 class="page-header">Draft for ng-AdImin</h1>
+					<div class="alert alert-success">
+					  This will contains images that is supposed to be
+					  ready for posted.<br>
+					  According to maxi:
+					  <ol>
+						<li>contains post title</li>
+						<li>category (drop-down list select option)</li>
+						<li>tags (textarea, comma separated)</li>
+						<li>include/exclude</li>
+						<li>Post!</li>
+					  </ol>
+					</div>
 
 					<form method="post" action="/admin/draft">
+					  <div class="form-group">
+						<label>Post Title</label>
+						<input class="form-control" type="text" name="title" />
+					  </div>
+					  <div class="form-group">
+						<label>Post Category</label>
+						<select class="form-control">
+						  <option>Satu</option>
+						</select>
+					  </div>
+					  <div class="form-group">
+						<label>Post Tags</label>
+						<textarea class="form-control">yes</textarea>
+					  </div>
 					  <table class="table table-bordered">
 						<thead>
 						  <tr>
@@ -22,6 +47,7 @@
 							<th>h</th>
 							<th>Title</th>
 							<th>Select</th>
+							<th>Fname</th>
 						  </tr>
 						</thead>
 						<tbody>
