adding URL table header (missing before)

--- a/app/templates/admin/admin_post.html
+++ b/app/templates/admin/admin_post.html
@@ -30,10 +30,11 @@
                   <tr>
                     <th>#</th>
                     <th>Thumb</th>
-		    <th>w</th>
-		    <th>h</th>
+					<th>w</th>
+					<th>h</th>
                     <th>Title</th>
                     <th>Select</th>
+					<th>URL</th>
                   </tr>
                 </thead>
                 <tbody>
