--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -273,6 +273,9 @@
                             <a href="/admin/draft"><i class="fa fa-dashboard fa-fw"></i> Draft</a>
                         </li>
                         <li>
+                            <a href="/admin/category"><i class="fa fa-dashboard fa-fw"></i> Category</a>
+                        </li>
+                        <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
