--- a/app/templates/admin/admin_category.html
+++ b/app/templates/admin/admin_category.html
@@ -1,1 +1,51 @@
-<h1>Hi Admin</h1>
+{% extends "admin/base.html" %}
+
+{% block title %}
+<title>Category Management</title>
+{% endblock %}
+
+{% block content %}
+
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">Manage Category ng-AdImin</h1>
+					<div class="alert alert-success">
+					  List of available categories.
+					</div>
+
+					<form method="post" action="/admin/category">
+					  <div class="form-group">
+						<label>Add New Category</label>
+						<input class="form-control" type="text" name="addcat" />
+					  </div>
+					  <table class="table table-bordered">
+						<thead>
+						  <tr>
+							<th>#</th>
+							<th>Category Name</th>
+						  </tr>
+						</thead>
+						<tbody>
+						  {% set count = 1 %}
+						  {% for cat in categories %}
+						  <tr>
+							<td>{{ count }}</td>
+							<td>{{ cat }}</td>
+						  </tr>
+						  {% set count = count + 1 %}
+						  {% endfor %}
+						</tbody>
+					  </table>
+					  <button class="btn btn-large btn-primary" type="submit" id="butInsertAll">Insert All Selection</button>
+					</form>
+
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /#page-wrapper -->
+	<br />
+{% endblock %}
+
