--- a/app/templates/admin/admin_draft.html
+++ b/app/templates/admin/admin_draft.html
@@ -31,7 +31,9 @@
 					  <div class="form-group">
 						<label>Post Category</label>
 						<select class="form-control">
-						  <option>Satu</option>
+						  {% for cat in categories %}
+						  <option>{{ cat }}</option>
+						  {% endfor %}
 						</select>
 					  </div>
 					  <div class="form-group">
