alter button text

--- a/app/templates/admin/admin_category.html
+++ b/app/templates/admin/admin_category.html
@@ -37,7 +37,7 @@
 						  {% endfor %}
 						</tbody>
 					  </table>
-					  <button class="btn btn-large btn-primary" type="submit" id="butInsertAll">Insert All Selection</button>
+					  <button class="btn btn-large btn-primary" type="submit" id="butInsertAll">Add New</button>
 					</form>
 
                 </div>
