--- a/app/templates/admin/admin_draft.html
+++ b/app/templates/admin/admin_draft.html
@@ -68,7 +68,7 @@
 						  {% endfor %}
 						</tbody>
 					  </table>
-					  <button class="btn btn-large btn-primary" type="submit" id="butInsertAll">Insert All Selection</button>
+					  <button class="btn btn-large btn-primary" type="submit" id="butInsertAll">Post Selections</button>
 					</form>
 
                 </div>
