--- a/app/templates/admin/admin_draft.html
+++ b/app/templates/admin/admin_draft.html
@@ -29,7 +29,7 @@
 					  </div>
 					  <div class="form-group">
 						<label>Post Category</label>
-						<select class="form-control">
+						<select name="category" class="form-control">
 						  {% for cat in categories %}
 						  <option>{{ cat }}</option>
 						  {% endfor %}
