adding more description about functionality

--- a/app/templates/admin/admin_draft.html
+++ b/app/templates/admin/admin_draft.html
@@ -11,6 +11,16 @@
                 <div class="col-lg-12">
                     <h1 class="page-header">Draft for ng-AdImin</h1>
 					<div class="alert alert-success">
+					  Satu post berisi:
+					  <ol>
+						<li>Satu Title</li>
+						<li>Satu Kategori</li>
+						<li>Banyak Tags</li>
+						<li>Banyak Gambar</li>
+					  </ol>
+
+					  <br>
+
 					  This will contains images that is supposed to be
 					  ready for posted.<br>
 					  <ol>
@@ -20,6 +30,12 @@
 						<li>include/exclude</li>
 						<li>Post!</li>
 					  </ol>
+					  
+					  <strong>TODO:</strong>
+					  <ol>
+						<li>Buat route untuk tags</li>
+					  </ol>
+					  
 					</div>
 
 					<form method="post" action="/admin/draft">
