--- a/app/templates/admin/admin_draft.html
+++ b/app/templates/admin/admin_draft.html
@@ -53,7 +53,7 @@
 					  </div>
 					  <div class="form-group">
 						<label>Post Tags</label>
-						<textarea class="form-control">yes</textarea>
+						<textarea class="form-control" name="tag">yes</textarea>
 					  </div>
 					  <table class="table table-bordered">
 						<thead>
