--- a/app/templates/admin/admin_draft.html
+++ b/app/templates/admin/admin_draft.html
@@ -41,7 +41,7 @@
 					<form method="post" action="/admin/draft">
 					  <div class="form-group">
 						<label>Post Title</label>
-						<input class="form-control" type="text" name="title" />
+						<input class="form-control" type="text" name="post-title" />
 					  </div>
 					  <div class="form-group">
 						<label>Post Category</label>
@@ -53,7 +53,7 @@
 					  </div>
 					  <div class="form-group">
 						<label>Post Tags</label>
-						<textarea class="form-control" name="tag">yes</textarea>
+						<textarea class="form-control" name="tag">yes, no, uh</textarea>
 					  </div>
 					  <table class="table table-bordered">
 						<thead>
