adding sidebar menu (link) to /admin/posts.

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -267,6 +267,9 @@
                             <a href="/admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
+                            <a href="/admin/posts"><i class="fa fa-dashboard fa-fw"></i> Posts</a>
+                        </li>
+                        <li>
                             <a href="/admin/grabber"><i class="fa fa-dashboard fa-fw"></i> Grabber</a>
                         </li>
                         <li>
